--- a/rxviewobserver-sample/src/main/res/layout/fragment_main.xml
+++ b/rxviewobserver-sample/src/main/res/layout/fragment_main.xml
@@ -22,6 +22,10 @@
                 android:layout_height="500dp"
                 android:background="@android:color/black" />
 
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="800dp"
